@@ -10,6 +10,7 @@ BUILDDIR=$(CURDIR)/debian/build
 VERSION := $(shell dpkg-parsechangelog | awk '/^Version:/ { print $$2 }')
 AC_VERSION := $(shell grep -w '^AC_INIT' configure.ac | cut -d' ' -f2 | \
 			sed 's/[][,]//g')
+MANGLED_VERSION := $(subst ~,-,$(VERSION))
 
 ifneq ($(VERSION),$(AC_VERSION))
 $(warning Version $(VERSION) in debian/changelog does not match $(AC_VERSION) in configure.ac!)
@@ -214,7 +215,7 @@ binary-indep: install
 				 -pubiquity-frontend-mythbuntu
 	dh_installdeb
 	dh_shlibdeps
-	dh_gencontrol
+	dh_gencontrol -- -Vmangled-version='$(MANGLED_VERSION)'
 	dh_md5sums
 	dh_builddeb
 
@@ -253,9 +254,9 @@ binary-arch: install
 	dh_installdeb
 	dh_shlibdeps
 ifdef bootloader-depends
-	dh_gencontrol -- -V'bootloader-depends=$(bootloader-depends)' -V'console-setup-depends=$(console-setup-depends)'
+	dh_gencontrol -- -V'bootloader-depends=$(bootloader-depends)' -V'console-setup-depends=$(console-setup-depends)' -Vmangled-version='$(MANGLED_VERSION)'
 else
-	dh_gencontrol -- -V'console-setup-depends=$(console-setup-depends)'
+	dh_gencontrol -- -V'console-setup-depends=$(console-setup-depends)' -Vmangled-version='$(MANGLED_VERSION)'
 endif
 	dh_md5sums
 	dh_builddeb
